--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "rsuite": "^4.8.9"
   },
   "scripts": {
     "start": "react-scripts start",
