--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
-    "rsuite": "^4.8.9"
+    "rsuite": "^4.8.9",
+    "shortid": "^2.2.16"
   },
   "scripts": {
     "start": "react-scripts start",
